# cookiecutter-c99

./: .gitignore  .gitmodules  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.c99  Dockerfile.py36  Jenkinsfile  Makefile  README.md
{{cookiecutter.project_slug}}/src/bar/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/bar/include/bar/: bar.h
{{cookiecutter.project_slug}}/src/bar/src/: bar.c
{{cookiecutter.project_slug}}/src/foo/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/foo/src/: foo.c
{{cookiecutter.project_slug}}/test/unit/: CMakeLists.txt
{{cookiecutter.project_slug}}/tests/functional/{{cookiecutter.lib_slug}}_cffi/: compile_cffi.py
{{cookiecutter.project_slug}}/tests/unit/src/: {{cookiecutter.lib_slug}}_test.c
{{cookiecutter.project_slug}}/{{cookiecutter.app_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/{{cookiecutter.app_slug}}/src/: {{cookiecutter.app_slug}}.c
{{cookiecutter.project_slug}}/{{cookiecutter.lib_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/{{cookiecutter.lib_slug}}/include/{{cookiecutter.lib_slug}}/: {{cookiecutter.lib_slug}}.h
{{cookiecutter.project_slug}}/{{cookiecutter.lib_slug}}/src/: {{cookiecutter.lib_slug}}.c
